--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -450,8 +450,8 @@ footer .support { margin-right: 0; padding: 18px 0; }
 
 /* Text input with suggestions */
 input.suggest + div { background: #fff; border: 1px solid #999999; position: absolute; z-index: 100; }
-input.suggest + div li { font-weight: bold; list-style-type: none; margin: 0; padding: 2px; }
-input.suggest + div li.selected { background-color: #666; color: #fff; }
+input.suggest + div li { clear: both; font-weight: bold; list-style-type: none; margin: 0; padding: 3px; }
+input.suggest + div li.selected { background-color: #defcb3; }
 input.suggest + div li span { font-weight: normal; }
 
 /* Teaching page */
