--- a/gobotany/static/sass/_common.scss
+++ b/gobotany/static/sass/_common.scss
@@ -1,12 +1,55 @@
-/* Definitions */
+/* Go Botany common definitions */
+
+@import "compass/css3/border-radius";
+@import "compass/css3/box-shadow";
+@import "compass/css3/images";   /* for gradient, etc. */
 
 $headings-font: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif;
 $body-font: Verdana, Geneva, "Lucida Sans Unicode", sans-serif;
 $narrower-body-font: Tahoma, "Trebuchet MS", "Lucida Sans Unicode", sans-serif;
 
-@import "compass/css3/border-radius";
-@import "compass/css3/box-shadow";
-@import "compass/css3/images";   /* for gradient, etc. */
+$link-green: #317b0c;
+$heading-green: #437829;
+$border-green: #c3d941;
+$light-green: #e1f0d1;
+$green-yellow: #ccdf53;
+$medium-brown: #807121;
+$pale-lime-green: #defcb3;
+
+$visited-link-color: #666e0b;
+$active-link-color: #45aC11;
+
+$text-color: #000;
+$navbar-color: #508e31;
+$footer-background-color: #b4d57f;
+$login-box-background-color: #d3eaad;
+
+$base-font-size: 12px;
+$nav-font-size: 14px;
+
+$text-line-height: 170%;
+
+$sidebar-box-vertical-padding: 16px;
+
+$tooltip-border-color: #c3d941;
+$tooltip-background-top-color: #eaf2e2;
+$tooltip-background-bottom-color: #d6e6c5;
+$tooltip-shadow-color: #333333;
+$tooltip-arrow-rotation: 225deg;
+
+$smallscreen-portrait-width: 320px;
+$smallscreen-landscape-width: 480px;
+
+$nav-button-color: #437829;
+$error-icon-offset: -20px;
+
+$smallscreen-margin: 8px;
+$smallscreen-potd-image-width: 297px;
+$smallscreen-portrait-box-width: 302px;
+$smallscreen-portrait-form-el-width: $smallscreen-portrait-box-width - 10px;
+$smallscreen-landscape-box-width: 462px;
+$smallscreen-current-section-color: #85c446;
+$smallscreen-choices-border-radius: 8px;
 
 $logo_width: 450px;
 
@@ -56,5 +99,73 @@ $disabled_orange_gradient: linear-gradient(
     &.disabled {
         border-color: mix($body_bg, $orange2, 75%);
         @include background($disabled_orange_gradient);
+    }
+}
+
+
+@mixin offscreen {
+    display: block;
+    text-indent: -9000px;
+}
+
+@mixin container-div {
+    .container {
+        margin: 0 auto;
+        padding: 0 10px;
+        width: 960px;
+    }
+}
+
+@mixin smallscreen-side-margins {
+    margin-left: $smallscreen-margin;
+    margin-right: $smallscreen-margin;
+}
+
+@mixin highlight-global-nav {
+    background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat;
+}
+
+@mixin highlight-global-nav-home {
+    background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent;
+}
+
+@mixin highlight-sidebar-nav-item {
+    color: #000;
+	content: "\25b8";
+	margin-left: -14px;
+    padding-bottom: 5px;
+	padding-right: 5px;
+}
+
+@mixin shadowbox-photo-titles-credits {
+    /* Override Shadowbox styles to allow multiple title lines for
+     * showing a photo title, photographer credit, and copyright. */
+    #sb-title, #sb-title-inner {
+        height: 76px;
+        line-height: 70%;
+        position: relative;
+    }
+    #sb-title-inner {
+        div {
+            bottom: 6px;
+            position: absolute;
+        }
+        h6 {
+            font-size: 16px;
+            line-height: 110%;
+            margin: 0 0 2px;
+            padding: 0;
+        }
+        span {
+            font-family: $headings-font;
+            font-size: 10px;
+        }
+        a {
+            color: #fff;
+            text-decoration: underline;
+        }
+    }
+    #sb-nav-close {
+        top: 56px !important;
     }
 }
