--- a/gobotany/static/sass/_help.scss
+++ b/gobotany/static/sass/_help.scss
@@ -460,7 +460,7 @@ $image-box-shadow-color: rgba(0, 0, 0, 0.6);
 }
 
 
-/* Begin media queries styles for the About section. */
+/* Begin media queries styles for the Help section. */
 
 /* Portrait-orientation styles */
 @media only screen and (max-width: 400px) {
@@ -598,4 +598,4 @@ $image-box-shadow-color: rgba(0, 0, 0, 0.6);
     }
 }
 
-/* End media queries styles for the About section */
+/* End media queries styles for the Help section */
