Fix bug where search query was no longer in box on results page. (#432)

--- a/gobotany/site/templates/concord/_header.html
+++ b/gobotany/site/templates/concord/_header.html
@@ -23,6 +23,7 @@
                     <form action="/search/" method="get">
                         <input type="text" autocomplete="off"
                             name="q"
+                            value="{% if query %}{{ query }}{% endif %}"
                             id="search-suggest"
                             placeholder="Search..."
                             class="suggest"
