--- a/gobotany/site/templates/gobotany/_header.html
+++ b/gobotany/site/templates/gobotany/_header.html
@@ -18,6 +18,7 @@
                     <form action="/search/" method="get">
                         <input type="text" autocomplete="off"
                             name="q"
+                            value="{% if query %}{{ query }}{% endif %}"
                             id="search-suggest"
                             placeholder="Search..."
                             class="suggest"
