--- a/gobotany/taxa/templates/gobotany/family.html
+++ b/gobotany/taxa/templates/gobotany/family.html
@@ -1,71 +1,21 @@
 {% extends "gobotany/_page_full_sidebar.html" %}
-{% load simplekey_extras %}
 
-{% block title %}
-Family: {{ family.name }} {% if common_name %}({{ common_name|cut:"The "|lower }}){% endif %}{% endblock %}
+{% block title %}Family: {{ family.name }} {% if common_name %}({{ common_name|cut:"The "|lower }}){% endif %}{% endblock %}
 
 {% block js_top %}
-    <script>
-        API_URL = '{% url 'api-base' %}';
-    </script>
-
-    {# TODO: eventually move elsewhere #}
-    {% include "simplekey/_partner_site_js.html" %}
+    {% include "gobotany/_taxa_js_top.html" %}
 {% endblock %}
 
 {% block js_require %}
-    var args = {
-        family_slug: '{{ family.slug }}'
-    };
-    require(['taxa/family'], function(family) {
-        family.init(args);
-    });
+    {% include "gobotany/_family_js_require.html" %}
 {% endblock %}
 
-{% block body_attributes %}id="family" class="taxa"{% endblock %}
+{% block body_attributes %}
+    {% include "gobotany/_family_body_attributes.html" %}
+{% endblock %}
 
 {% block main_content %}
-                <h1>Family: {{ family.name }}</h1>
-                {% if common_name %}
-                    <p class="common">{{ common_name|cut:"The "|lower }}</p>
-                {% endif %}
-                <p class="description">
-                {% if family.description %}
-                    {{ family.description }}
-                {% else %}
-                    (Description coming soon)
-                {% endif %}
-                </p>
-                
-                <div class="pics">
-                    {% for drawing in family_drawings %}
-                        <div class="img-gallery">
-                            <div class="plant">
-                                <div class="frame"></div>
-                                <a href="{{ drawing.image_medium }}"
-                                    title="{% photo_credit drawing drawing.content_object.scientific_name %}">
-                                    <img class="map"
-                                        src="{{ drawing.thumb_large }}"
-                                        alt="{% photo_credit drawing drawing.content_object.scientific_name %}">
-                                </a>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-
-                <h2>This Family&#8217;s Genera in New England:</h2>
-                <ul class="genera">
-                {% for genus in family.genera.all %}
-                    <li><i><a href="{% url 'taxa-genus' genus.slug %}"
-                    >{{ genus.name }}</a></i></li>
-                {% endfor %}
-                </ul>
-
-                <p class="visit-dkey">
-                  Visit this family in the
-                  <a href="{% url 'dkey_page' family.name.lower %}"
-                     >Dichotomous Key</a>
-                </p>
+    {% include "gobotany/_family_main_content.html" %}
 {% endblock %}
 
 {% block sidebar_content %}
