Remove unneccessary template override for partner sites. (#415)

--- a/gobotany/simplekey/templates/concord/simple.html
+++ b/gobotany/simplekey/templates/concord/simple.html
@@ -70,5 +70,5 @@
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "concord/_sidebar_items.html" %}
+    {% include "gobotany/_sidebar_items.html" %}
 {% endblock %}
