--- a/gobotany/simplekey/templates/partner/pilegroup.html
+++ b/gobotany/simplekey/templates/partner/pilegroup.html
@@ -86,5 +86,5 @@
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "partner/_sidebar_items.html" %}
+    {% include "gobotany/_sidebar_items.html" %}
 {% endblock %}
