--- a/gobotany/site/templates/concord/terms.html
+++ b/gobotany/site/templates/concord/terms.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block main_content %}
-    {% include "gobotany/_terms_content.html" %}
+    {% include "gobotany/_terms_main_content.html" %}
 {% endblock %}
 
 {% block sidebar_content %}
