--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -1,21 +1,19 @@
 {% extends "concord/_base.html" %}
-{% load simplekey_extras %}
-
-{# Home page template for a sample partner site, overriding Go Botany #}
 
 {% block title %}Concord Flora: Go Botany{% endblock %}
 {% block title_suffix %}{% endblock %}
 
 {% block more_meta_link %}
-    <link rel="alternate" type="application/atom+xml"
-        title="Atom feed: Plant of the Day"
-        href="http://{{ request.META.HTTP_HOST }}/plantoftheday/atom.xml">
+    {% include "gobotany/_home_feed_link.html" %}
 {% endblock %}
 
-{% block body_attributes %}id="home" class="partner-site"{% endblock %}
+{% block body_attributes %}
+    {# So far, use one set of body attributes for all partner sites. #}
+    {% include "gobotany/_home_partner_body_attributes.html" %}
+{% endblock %}
 
 {% block js_require %}
-    require(['site/home']);
+    {% include "gobotany/_home_js_require.html" %}
 {% endblock %}
 
 {% block header %}
@@ -23,116 +21,7 @@
 {% endblock %}
 
 {% block body_content %}
-    <div class="content">
-        <div class="container">
-            <div id="banner">
-            {% for image in home_page_images %}
-                <img src="{{ image.image.url }}" alt="">
-            {% endfor %}
-                <div id="overlay">
-                    <h2>Simple ID Key</h2>
-                    <img src="/static/images/layout/separator.png"
-                        alt="Go Botany">
-                    <p>Want to know what that plant is? With the 
-                    Go Botany Concord Flora <b>Simple Key</b>,
-                    you can identify over 1,200 common
-                    New England plants! Observe closely, collect a sample or
-                    take a photo, answer some questions, and narrow down to
-                    the correct identification.</p>
-                    <a href="{% url 'level1' 'simple' %}" id="cta">Get Started</a>
-                </div>
-            </div>
-            
-            {% comment %}
-            Omit section introductions.
-            <div class="three-col">
-                <h3>PlantShare</h3>
-                <h4>Connect with other plant fans!</h4>
-                <p>Join our on-line community of plant enthusiasts! Find
-                friends, collaborate on field surveys for plants, share your
-                discoveries, get help identifying plants, make maps, and
-                develop checklists of plants for particular sites you are
-                exploring.</p>
-                <a class="learn-more" href="{% url 'plantshare-placeholder' %}">Learn More</a>
-            </div>
-            <div class="three-col">
-                <h3>Advanced ID Tools</h3>
-                <h4>For experienced botanists!</h4>
-                <p>Identify over 3,000 New England plants by using our Full
-                Identification Key, including technical multiple-access and
-                dichotomous keys to families, genera, and species. Also learn
-                about subspecies and varieties native to our region.</p>
-                <a class="learn-more"
-                    href="{% url 'advanced-id-tools' %}">Learn More</a>
-            </div>
-            <div class="three-col last">
-                <h3>Teaching Tools</h3>
-                <h4>New: a useful teaching resource!</h4>
-                <p>Go Botany encourages informal, self-directed education in
-                botany for science students and beginning and amateur
-                botanists. Professors, teachers, and environmental educators
-                can share curricula and teaching ideas.</p>
-                <a class="learn-more" href="{% url 'site-teaching' %}" >Learn More</a>
-            </div>
-            {% endcomment %}
-            <div class="three-col"></div>
-
-            <div class="intro">
-                <p>This <b>Go Botany Concord Flora</b> web site contains a
-                comprehensive list of the <b>plants of Concord,
-                Massachusetts</b>, and is a customized version of Go Botany.
-                To learn about all of the plants of New England, visit the main
-                <a href="http://gobotany.newenglandwild.org/" 
-					>Go Botany</a>
-                web site.</p>
-
-                <p><a href="http://www.ray-a.com/" 
-					>Ray Angelo</a>, former 
-				Curator of Vascular Plants for the New England Botanical Club, 
-				kindly provided the list of Concord plants, with further 
-				contributions by Bryan Connolly, Massachusetts State Botanist,
-				and Charles Davis, Curator of Vascular Plants at Harvard University 
-				Department of Organismic and Evolutionary Biology. The nomenclature
-				is from 
-				<a href="http://www.newenglandwild.org/store/flora-novae-angliae/"
-				>Flora
-                Novae Angliae</a> by Arthur Haines, Research Botanist at
-                New England Wild Flower Society.</p>
-            </div>
-
-            <div id="potd">
-            {% if plant_of_the_day %}
-                <a href="/species/{{ plant_of_the_day.genus_name|lower }}/{{ plant_of_the_day.epithet }}/"
-                    title="Learn more about {{ plant_of_the_day.scientific_name }}">
-                  <img src="{{ plant_of_the_day_image.image_medium }}"
-                       alt="{{ plant_of_the_day.scientific_name }}">
-                </a>
-                <div class="details">
-                    <h3>Plant of the Day:
-                        <span class="latin">{{ plant_of_the_day.scientific_name|italicize_plant|safe }}</span>
-                        <span class="english">{{ plant_of_the_day.common_names.all.0 }}</span>
-                    </h3>
-                    <p>{{ plant_of_the_day.factoid|slice:":274"}}
-                    {% if plant_of_the_day.factoid|length > 274 %}...{% endif %}</p>
-                    <a class="learn-more" href="/species/{{ plant_of_the_day.genus_name|lower }}/{{ plant_of_the_day.epithet }}/">Learn More</a>
-                </div>
-            {% else %}
-                <p>Error: Plant of the Day information missing</p>
-            {% endif %}
-            </div>
-
-			{% comment %}
-			Ommit our donation section for Concord.
-            <div class="donate">
-                <p>Please contribute to our mission to conserve and promote
-                the region&#8217;s plants by donating to New England Wild
-                Flower Society.
-                <a href="http://www.newenglandwild.org/support/">Donate</a>
-                </p>
-            </div>
-			{% endcomment %}
-        </div>
-    </div>
+    {% include "concord/_home_body_content.html" %}
 {% endblock %}
 
 {% block footer %}
